--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -31,7 +31,7 @@
                         {% if user.socialaccount_set.all.0.get_avatar_url %}
                             <img class="rounded-circle" width="30px" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
                         {% else %}
-                            <img class="rounded-circle" width="30px" src="https://doitdjango.com/avatar/id/1792/ba5c68433666ad85/svg/{{ user.email }}">
+                            <img class="rounded-circle" width="30px" src="https://doitdjango.com/avatar/id/1792/*/svg/{{ user.email }}">
                         {% endif %}
                         &nbsp;
                         {{ user.username }}
